--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class=container>
         <h1>Let's play Battleship!</h1>
-        <button>Make a Guess</button>
+        <button id="start">Make a Guess</button>
     </div>
     
 <script src="script.js"></script>    
